fixed an issue where changing level or classes would not save on mobile

--- a/static/css/mobile.css
+++ b/static/css/mobile.css
@@ -417,6 +417,7 @@ body {
     height: 15%;
     width: 60%;
     top: 45%;
+    left: 20%;
 }
 
 .delete_text {
